// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Introspector test schema - 2504 1`] = `
"type DirectMessage @pgTable(name: \\"direct_messages\\") {
  id: Int! @unique
  receiver_id: User
  sender_id: User
  text: String!
}

type User @pgTable(name: \\"users\\") {
  id: Int! @unique
  direct_messages: [DirectMessage]
  direct_messages: [DirectMessage]
  name: String!
}"
`;

exports[`Introspector test schema - 2504 2`] = `
"type DirectMessage @db(name: \\"direct_messages\\") {
  id: Int! @id(strategy: SEQUENCE) @sequence(name: \\"direct_messages_id_seq\\", initialValue: 1, allocationSize: 1)
  receiver_id: User
  sender_id: User
  text: String!
}

type User @db(name: \\"users\\") {
  id: Int! @id(strategy: SEQUENCE) @sequence(name: \\"users_id_seq\\", initialValue: 1, allocationSize: 1)
  direct_messages: [DirectMessage]
  direct_messages: [DirectMessage]
  name: String!
}"
`;
